--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 addProduct.form.productId.label=Identyfikator nowego produktu
 AbstractUserDetailsAuthenticationProvider.badCredentials=Niepoprawna nazwa u¿ykownika lub has³o
 addProduct.form.productImage.label=Zdjêcie produktu
+addProduct.form.productManual.label=Instrukcja obs³ugi produktu
