--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,11 @@
 addProduct.form.productId.label=Identyfikator nowego produktu
+addProduct.form.name.label=Nazwa
+addProduct.form.unitPrice.label=Cena
+addProduct.form.manufacturer.label=Producent
+addProduct.form.category.label=Kategoria
+addProduct.form.unitsInStock.label=Liczba dostêpnych sztuk
+addProduct.form.description.label=Opis
+addProduct.form.condition.label=Stan
 AbstractUserDetailsAuthenticationProvider.badCredentials=Niepoprawna nazwa u¿ykownika lub has³o
 addProduct.form.productImage.label=Zdjêcie produktu
 addProduct.form.productManual.label=Instrukcja obs³ugi produktu
