Added JSR-303 bean validation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,3 +9,8 @@ addProduct.form.condition.label=Stan
 AbstractUserDetailsAuthenticationProvider.badCredentials=Niepoprawna nazwa u¿ykownika lub has³o
 addProduct.form.productImage.label=Zdjêcie produktu
 addProduct.form.productManual.label=Instrukcja obs³ugi produktu
+Pattern.Product.productId.validation=B³êdny identyfikator produktu. Powinien sk³adaæ siê z litery P oraz liczby.
+Size.Product.name.validation=B³êdna nazwa produktu. Powinna mieæ od 4 do 50 znaków.
+Min.Product.unitPrice.validation=B³êdna cena produktu. Cena nie mo¿e byæ ujemna.
+Digits.Product.unitPrice.validation=B³êdna cena produktu. Cena powinna sk³adaæ siê maksymalnie z 8 cyfr reprezentuj¹cych czêœc ca³kowit¹ i 2 cyfr reprezentuj¹cych czêœæ u³amkow¹.
+NotNull.Product.unitPrice.validation=B³êdna cena produktu. Cena nie mo¿e byæ pusta.
