Added validation for category and unitsInStock

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,3 +14,5 @@ Size.Product.name.validation=B³êdna nazwa produktu. Powinna mieæ od 4 do 50 znak
 Min.Product.unitPrice.validation=B³êdna cena produktu. Cena nie mo¿e byæ ujemna.
 Digits.Product.unitPrice.validation=B³êdna cena produktu. Cena powinna sk³adaæ siê maksymalnie z 8 cyfr reprezentuj¹cych czêœc ca³kowit¹ i 2 cyfr reprezentuj¹cych czêœæ u³amkow¹.
 NotNull.Product.unitPrice.validation=B³êdna cena produktu. Cena nie mo¿e byæ pusta.
+NotNull.Product.category.validation=B³êdna kategoria produktu. Kategoria nie mo¿e byæ pusta.
+Min.Product.unitInStock.validation=B³êdna iloœæ dostêpnych sztuk. Iloœæ nie mo¿e byæ ujemna.
