Added own category validator, now you have to use allowed category like "laptop" or "smartfon"

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,3 +17,4 @@ NotNull.Product.unitPrice.validation=B³êdna cena produktu. Cena nie mo¿e byæ pus
 NotNull.Product.category.validation=B³êdna kategoria produktu. Kategoria nie mo¿e byæ pusta.
 Min.Product.unitInStock.validation=B³êdna iloœæ dostêpnych sztuk. Iloœæ nie mo¿e byæ ujemna.
 com.packt.webstore.validator.ProductId.message=Produkt o wskazanym identyfikatorze ju¿ istnieje.
+com.packt.webstore.validator.category.message=Nie ma takiej kategorii.
