Added productImage validation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,3 +19,4 @@ Min.Product.unitInStock.validation=B³êdna iloœæ dostêpnych sztuk. Iloœæ nie mo¿e
 com.packt.webstore.validator.ProductId.message=Produkt o wskazanym identyfikatorze ju¿ istnieje.
 com.packt.webstore.validator.category.message=Nie ma takiej kategorii.
 com.packt.webstore.validator.UnitsInStockValidator.message=Nie mo¿esz dodaæ wiêcej ni¿ 99 sztuk towaru o cenie wy¿szej ni¿ 10000.
+com.packt.webstore.validator.ProductImageValidator.message=Za du¿y rozmiar pliku. Maksymalny rozmiar to 1MB.
